crates/atlas-runtime/tests/snapshots/parser_tests__parse_variable_reference.snap
---
source: crates/atlas-runtime/tests/parser_tests.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Identifier:
            name: x
            span:
              start: 0
              end: 1
        span:
          start: 0
          end: 2
