crates/atlas-runtime/tests/snapshots/parser_tests__return_no_value.snap
---
source: crates/atlas-runtime/tests/parser_tests.rs
expression: program
---
items:
  - Statement:
      Return:
        value: ~
        span:
          start: 0
          end: 7
