crates/atlas-runtime/tests/snapshots/parser_tests__return_statement.snap
---
source: crates/atlas-runtime/tests/parser_tests.rs
expression: program
---
items:
  - Statement:
      Return:
        value:
          Literal:
            - Number: 42
            - start: 7
              end: 9
        span:
          start: 0
          end: 10
