crates/atlas-runtime/tests/snapshots/parser_tests__simple_assignment.snap
---
source: crates/atlas-runtime/tests/parser_tests.rs
expression: program
---
items:
  - Statement:
      Assign:
        target:
          Name:
            name: x
            span:
              start: 0
              end: 1
        value:
          Literal:
            - Number: 42
            - start: 4
              end: 6
        span:
          start: 0
          end: 7
