crates/atlas-runtime/tests/snapshots/parser_tests__string_literal.snap
---
source: crates/atlas-runtime/tests/parser_tests.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Literal:
            - String: hello
            - start: 0
              end: 7
        span:
          start: 0
          end: 8
